--- a/src/components/particles/styles/_vars.scss
+++ b/src/components/particles/styles/_vars.scss
@@ -53,22 +53,22 @@ $color-tertiary: $color-dark-blue;
 $color-quaternary: $color-pink;
 
 $vars: (
-	white: $color-white,
-	off-white: $color-off-white,
-	grey-lightest: $color-grey-lightest,
-	grey-light: $color-grey-light,
-	grey: $color-grey,
-	black: $color-black,
-	red: $color-red,
-	red-dark: $color-red-dark,
-	pink: $color-pink,
-	blue: $color-blue,
-	light-blue: $color-light-blue,
-	dark-blue: $color-dark-blue,
-	primary: $color-primary,
-	secondary: $color-secondary,
-	tertiary: $color-tertiary,
-	quaternary: $color-quaternary
+  white: $color-white,
+  off-white: $color-off-white,
+  grey-lightest: $color-grey-lightest,
+  grey-light: $color-grey-light,
+  grey: $color-grey,
+  black: $color-black,
+  red: $color-red,
+  red-dark: $color-red-dark,
+  pink: $color-pink,
+  blue: $color-blue,
+  light-blue: $color-light-blue,
+  dark-blue: $color-dark-blue,
+  primary: $color-primary,
+  secondary: $color-secondary,
+  tertiary: $color-tertiary,
+  quaternary: $color-quaternary,
 );
 
 /* FONT VARIABLES */
