--- a/src/components/particles/styles/mixins/_active-states.scss
+++ b/src/components/particles/styles/mixins/_active-states.scss
@@ -1,9 +1,11 @@
 /*///////////////
 /// ACTIVE STATES
-*///////////////
+*/ //////////////
 
 @mixin active-states() {
   &:hover,
   &:focus,
-  &:active { @content }
+  &:active {
+    @content;
+  }
 }
