--- a/src/components/particles/styles/reset/_box-sizing.scss
+++ b/src/components/particles/styles/reset/_box-sizing.scss
@@ -1,10 +1,12 @@
 /*///////////////
 /// BOX-SIZING
-*///////////////
+*/ //////////////
 
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
